# mulle-project

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  DISTRIBUTE.md  LICENSE  README-RELEASENOTES.md  README.md  RELEASENOTES.md  amalgamate-sources.sh  formula-info.sh.template  generate-formula.sh.template  install.sh  mulle-clion-test  mulle-environment.sh  mulle-files.sh  mulle-find-symbol  mulle-git.sh  mulle-gitignore  mulle-homebrew-debian  mulle-homebrew-env  mulle-homebrew-get-version  mulle-homebrew-init  mulle-homebrew-path  mulle-homebrew-releasenotes  mulle-homebrew-untag  mulle-homebrew-version  mulle-homebrew.sh  mulle-objc-setup.dot  mulle-project  mulle-project-add-missing-branch-identifier  mulle-project-ai  mulle-project-ai-api-toc  mulle-project-ai-bash-completion  mulle-project-ai-commit  mulle-project-ai-project-version  mulle-project-ai-release  mulle-project-ai-untracked-files  mulle-project-all  mulle-project-amalgamation-refresh  (+68 more)
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: description.md.bud  executables.md.bud  header.md.bud  install.md.bud  properties.plist  usage.md.bud
mulle-project/: formula-info.sh  version-info.sh
src/: mulle-git.sh  mulle-homebrew.sh  mulle-project-git.sh  mulle-project-homebrew.sh  mulle-project-settings.sh  mulle-project-sourcetree-parser.sh  mulle-project-user-files-settings.sh  mulle-project-user-files.sh  mulle-project-version.sh  mulle-publisher.sh  mulle-sourcetree-parser.sh  mulle-user-files-settings.sh  mulle-user-files.sh  mulle-version.sh
src/mulle-sde/mulle-project/: usage
src/mulle-sde/mulle-project/etc/project/: post-release.sh.sample  version-info.sh
templates/: .travis.yml.scion  README.md.scion  mulle-project-env.scion
travis/: Dockerfile  README.md  run-mulle-sde-project
travis/i386/: Dockerfile  README.md  run-mulle-sde-project
